# url-shortener

./: .gitignore  Dockerfile  docker-compose.yml  pyproject.toml
project/: manage.py
project/accounts/: tests.py
project/project/: settings.py  urls.py
project/shortener/: admin.py  apps.py  forms.py  models.py  tests.py  urls.py  utils.py  views.py
project/shortener/migrations/: 0001_initial.py  0002_rename_short_url_shorturl.py
project/static/css/: style.css
project/static/js/: redirect.js
project/staticfiles/css/: style.css
project/staticfiles/css/js/: redirect.js
project/staticfiles/js/: redirect.js
project/statistic/: models.py  urls.py  views.py
project/templates/: _base.html  create.html  home.html  pagenotfound.html  redirect.html  urlcreated.html
project/templates/account/: login.html  logout.html  sighup.html
project/templates/shortener/: create.html  link_confirm_delete.html  link_list.html  link_update_form.html  pagenotfound.html  redirect.html  url_list.html  urlcreated.html
project/templates/statistic/: short_url_stat.py
