[tool.poetry]
package-mode = false
readme = "README.md"
homepage = 'http://0.0.0.0:8000/'
repository = 'http://0.0.0.0:8000/'

[tool.poetry.dependencies]
python = "^3.11"
Django = "^5.1"
psycopg2-binary = "^2.9.9"
requests = "^2.32.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
